--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -9,7 +9,7 @@
 }
 
 .navbar-logo-image {
-    height: 50px;
+    height: 75px;
 }
 
 .navbar-links {
@@ -43,7 +43,7 @@
     color: #003366;
     padding: 10px 20px;
     border-radius: 4px;
-    margin-left: 20px;
+
     font-weight: bold;
     transition: background-color 0.3s ease;
 }
@@ -53,10 +53,10 @@
 }
 
 .search-box {
-    padding: 8px;
+    padding: 8px!important;
     border-radius: 4px;
     border: 1px solid #ffd700; /* Gold */
-    margin-left: 20px;
+    margin:0 20px;
     width: 250px;
     transition: border-color 0.3s ease;
 }
@@ -137,6 +137,7 @@
 
     .navbar-links {
         flex-direction: column;
+        align-items: flex-start;
         width: 100%;
     }
 
